--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = [
     { name = "geoqiao", email = "realvincentqiao@gmail.com" }
 ]
 dependencies = [
-    "Jinja2",
-    "PyGithub",
-    "feedgen",
+    "jinja2>=3.1.3",
     "marko>=2.0.3",
+    "feedgen>=1.0.0",
+    "pygithub>=2.3.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
@@ -17,5 +17,4 @@ requires-python = ">= 3.11"
 [tool.rye]
 managed = true
 virtual = true
-dev-dependencies = [
-]
+dev-dependencies = []
