--- a/.github/workflows/gen_site.yml
+++ b/.github/workflows/gen_site.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Generate contents
         run: |
           source venv/bin/activate
-          python main.py ${{ secrets.G_T }} geoqiao/github_blog
+          python main.py ${{ secrets.G_T }} ${{ github.repository }}
 
       - name: Push contents
         run: |
