--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,13 @@
 [project]
-name = "github_blog"
+name = "github-blog"
 version = "0.1.0"
-description = "Default template for PDM package"
-authors = [
-    {name = "geoqiao", email = "realvincentqiao@gmail.com"},
-]
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.9"
 dependencies = [
-    "jinja2>=3.1.4",
     "feedgen>=1.0.0",
+    "jinja2>=3.1.4",
     "marko>=2.1.2",
     "pygithub>=2.4.0",
     "pyyaml>=6.0.2",
 ]
-requires-python = "==3.11.*"
-readme = "README.md"
-license = {text = "MIT"}
-
-
-[tool.pdm]
-distribution = false
